k8s/services/vaultwarden/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 1193
        runAsGroup: 1193
        fsGroup: 1193
      containers:
        - name: vaultwarden
          image: quay.io/vaultwarden/server
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data
