k8s/services/vaultwarden/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - warden.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: vaultwarden
          port: 80
